--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,6 +5,18 @@
 
 /* 
   ===================
+  HTML Body
+  ===================
+*/
+
+body,
+html {
+  max-width: 100%;
+  min-height: 100vh;
+}
+
+/* 
+  ===================
   Basic text elements
   ===================
 */
